--- a/views/issue.html
+++ b/views/issue.html
@@ -7,12 +7,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../public/style.css">
+    <link rel="stylesheet" type="text/css" href="../public/style.css">
   </head>
   <body>
     <header>
       <h1 id='projectTitle'></h1>
     </header>
+
     <center>
       <div id='submitNewIssue'>
         <br>
