--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,16 @@
       <h2><a href='/apitest/'>EXAMPLE: Go to <i>/apitest/</i> project issues</a></h2>
     </div>
     <hr style='margin: 50px'>
+    <div id="user-ui">
+      <form id="user-form" method="post">
+        <input type="text" name="issue_title" placeholder="*Title" class="issue-criteria"><br>
+        <textarea type="text" name="issue_text" placeholder="*Text" class="text-area" required=''></textarea><br>
+        <input type="text" name="created_by" placeholder="*Created by" class="issue-criteria" required=''><br>
+        <input type="text" name="assigned_to" placeholder="(opt)Assigned to" class="issue-criteria"><br>
+        <input type="text" name="status_text" placeholder="(opt)Status text" class="issue-criteria"><br>
+        <button type="submit">Submit Issue</button>
+      </form>
+    </div>
     <div id='testui'>
       <h2 style="text-align: left">API Tests:</h2>
       <h3>Submit issue on <i>apitest</i></h3>
@@ -62,6 +72,19 @@
             crossorigin="anonymous"></script>
     <script>
       $(function() {
+        $("#user-ui").submit(function(e) {
+          var api = $('#testForm').serializeArray()[0].value
+            .split('').filter(c => c != ' ').join('');
+            $.ajax({
+              url: '/api/issues/'+api,
+              type: 'post',
+              data: $('#user-form'),
+              success: function(data) {
+                $('#jsonResult').text(JSON.stringify(data));
+              }
+            });
+        })
+
         $('#testForm').submit(function(e) {
           $.ajax({
             url: '/api/issues/apitest',
