--- a/views/issue.html
+++ b/views/issue.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h1 id='projectTitle'></h1>
+      
     </header>
     <center>
       <div id='submitNewIssue'>
@@ -26,12 +26,12 @@
           <button type="submit">Submit Issue</button>
         </form>
       </div>
-      
+
       <div id='issueDisplay'></div>
-      
+
       <hr style='margin: 50px; margin-top: 200px'>
     </center>
-    
+
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
@@ -59,16 +59,16 @@
                 '<br>',
                 '<p class="id"><b>Created by:</b> '+ele.created_by+'  <b>Assigned to:</b> '+ele.assigned_to,
                 '<p class="id"><b>Created on:</b> '+ele.created_on+'  <b>Last updated:</b> '+ele.updated_on,
-                '<br><a href="#" class="closeIssue" id="'+ele._id+'">close?</a> <a href="#" class="deleteIssue" id="'+ele._id+'">delete?</a>',
+                '<br><a href="#" class="closeIssue" id="'+ele._id+'">close</a> <a href="#" class="deleteIssue" id="'+ele._id+'">delete</a>',
                 '</div>'
-                
+
               ];
               issues.push(single.join(''));
             });
             $('#issueDisplay').html(issues.join(''));
           }
         });
-        
+
         $('#newIssue').submit(function(e){
           e.preventDefault();
           $(this).attr('action', "/api/issues/" + currentProject);
@@ -79,14 +79,15 @@
             success: function(data) { window.location.reload(true); }
           });
         });
-        
+
         $('#issueDisplay').on('click','.closeIssue', function(e) {
+          console.log("$('#issueDisplay').on('click','.closeIssue', function(e)")
           var url = "/api/issues/"+currentProject;
           $.ajax({
             type: "PUT",
             url: url,
             data: {_id: $(this).attr('id'), open: false, type: 'closeIssue'},
-            success: function(data) { alert(data); window.location.reload(true); }
+            success: function(data) { console.log(data); alert(data.issue_title); window.location.reload(true); }
           });
           e.preventDefault();
         });
@@ -96,7 +97,7 @@
             type: "DELETE",
             url: url,
             data: {_id: $(this).attr('id')},
-            success: function(data) { alert(data); window.location.reload(true); }
+            success: function(data) {console.log(data); alert(data.issue_title); window.location.reload(false); }
           });
           e.preventDefault();
         });
