--- a/public/style.css
+++ b/public/style.css
@@ -14,8 +14,9 @@ body {
 
 html, body{
 	height: 100%;
+  background-color: #d3d6eb;
 }
-
+/*
 body.demos .section-title img {
     max-width: 280px;
     display: block;
@@ -37,7 +38,7 @@ body.demos .service-widget {
 
 body.demos .container-fluid {
     max-width: 1080px
-}
+} */
 
 a {
     color: #1f1f1f;
@@ -116,6 +117,43 @@ a {
 }
 
 a,
+#project-issues {
+  margin-top: 2px;
+  background-color: #b07689;
+  border: .2px solid #ddd;
+  /* padding-left: 50%; */
+  font-size: 16px;
+  text-align: center;
+}
+#title {
+  text-align: center;
+  font-weight: bold;
+  font-size: 20pt;
+}
+
+#testui {
+  text-align: center;
+  margin: auto;
+  width: 70%;
+
+}
+input {
+  width: 250px;
+  padding-bottom: 7pt;
+  margin-bottom: 5pt;
+}
+textarea {
+  width: 250px;
+  padding-bottom: 7pt;
+  margin-bottom: 5pt;
+}
+label {
+text-align: center;
+  padding-bottom: 7pt;
+  margin-bottom: 5pt;
+  margin-left: -20%;
+
+}
 button {
     margin-top: 2px;
     background-color: #d9e0a5;
